# Quadcopter

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Quad.ino  README.md  buffer.h  build.gradle  controller.cpp  controller.h  imu.cpp  imu.h  motors.cpp  motors.h  pid.cpp  pid.h  pry.h  pryh.h  sensors.cpp  sensors.h  ultrasonic.cpp  ultrasonic.h
Quad/: Accelerometer.cpp  Accelerometer.h  AttitudeDeterminator.cpp  AttitudeDeterminator.h  Buffer.h  Command.cpp  Command.h  ComplimentaryFilter.cpp  ComplimentaryFilter.h  Controller.cpp  Controller.h  Filter.h  Gyroscope.cpp  Gyroscope.h  IMU.cpp  IMU.h  IMUSensor.cpp  IMUSensor.h  Kalman.cpp  Kalman.h  KalmanFilter.cpp  KalmanFilter.h  Matrix.cpp  Matrix.h  Motors.cpp  Motors.h  PID.cpp  PID.h  PRY.h  Quad.ino  Sensors.cpp  Sensors.h  Ultrasonic.cpp  Ultrasonic.h  Util.h  buffer.h  controller.cpp  controller.h  imu.cpp  imu.h  (+8 more)
Quad/AttitudeDetermination/: Accelerometer.cpp  Accelerometer.h  AttitudeDetermination.ino  AttitudeDeterminator.cpp  AttitudeDeterminator.h  Buffer.h  ComplimentaryFilter.cpp  ComplimentaryFilter.h  Gyroscope.cpp  Gyroscope.h  IMUSensor.cpp  IMUSensor.h
Quad/AttitudeDeterminator/: Accelerometer.cpp  AttitudeDeterminator.h  Gyroscope.cpp  IMUSensor.cpp
config/: config.cfg
scripts/: fullBuild.sh  piBuild.sh
src/: CMakeLists.txt  Ultrasonic.cpp  Ultrasonic.h
src/AttitudeDeterminator/: Accelerometer.cpp  Accelerometer.h  AttitudeDeterminator.cpp  AttitudeDeterminator.h  CMakeLists.txt  ComplimentaryFilter.cpp  ComplimentaryFilter.h  Filter.h  Gyroscope.cpp  Gyroscope.h  IMU.cpp  IMU.h  IMUSensor.cpp  IMUSensor.h  KalmanFilter.cpp  KalmanFilter.h
src/AttitudeDeterminator/cpp/: Accelerometer.cpp  AttitudeDeterminator.cpp  ComplimentaryFilter.cpp  IMU.cpp  IMUSensor.cpp  KalmanFilter.cpp
src/AttitudeDeterminator/headers/: Accelerometer.h  AttitudeDeterminator.h  ComplimentaryFilter.h  Filter.h  Gyroscope.h  IMU.h  IMUSensor.h  KalmanFilter.h
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  PID.cpp  PID.h
src/Motors/: CMakeLists.txt  Motors.cpp  Motors.h  Servo.cpp  Servo.h
src/Utils/: CMakeLists.txt  Logger.cpp  Logger.h  UtilityFunctions.h
src/main/: main.cpp
src/main/cpp/: main.cpp
test/: test_Example.cpp
